# MRSD-Assignments

./: README.md
Task2/: TeamD_lte_Task2.ino
Task4/HW2/catkin_ws/arithmetic_node/: CMakeLists.txt  package.xml
Task4/HW2/catkin_ws/arithmetic_node/msg/: arithmetic_reply.msg
Task4/HW2/catkin_ws/arithmetic_node/src/: arithmetic_node.cpp
Task4/HW2/catkin_ws/chatbot_node/: CMakeLists.txt  README.md  package.xml  reply_msg.msg
Task4/HW2/catkin_ws/chatbot_node/launch/: launch_chatbot.launch
Task4/HW2/catkin_ws/chatbot_node/src/: chatbot_node.cpp
Task4/HW2/catkin_ws/counter_node/: CMakeLists.txt  package.xml
Task4/HW2/catkin_ws/counter_node/src/: counter_node.cpp
Task4/HW2/catkin_ws/counter_node/srv/: counter.srv
Task4/HW2/catkin_ws/message_ui/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
Task4/HW2/catkin_ws/message_ui/msg/: sent_msg.msg
Task4/HW2/catkin_ws/message_ui/resource/: MessageGUI.ui
Task4/HW2/catkin_ws/message_ui/scripts/: message_ui
Task4/HW2/catkin_ws/message_ui/src/message_ui/: message_gui.py
